name:                distill
version:             0.0.1
synopsis:            A dependently-typed intermediate language.
license:             MIT
license-file:        LICENSE
author:              Devon Cooper
maintainer:          dnoved1@gmail.com
copyright:           (c) 2015 Devon Cooper
stability:           experimental
category:            Compilers/Interpreters
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Distill.Expr
    Distill.SExpr
  build-depends:
    base >=4.8 && <4.9
   ,mtl
   ,parsec
   ,pretty
  hs-source-dirs:      src
  default-language:    Haskell2010
