name:                distill
version:             0.0.1
synopsis:            A dependently-typed intermediate language.
license:             MIT
license-file:        LICENSE
author:              Devon Cooper
maintainer:          dnoved1@gmail.com
copyright:           (c) 2015 Devon Cooper
stability:           experimental
category:            Compilers/Interpreters
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Distill.Expr
    Distill.Expr.Representation
    Distill.Expr.Syntax
    Distill.Expr.TypeCheck
    Distill.Transform
    Distill.UniqueName
    Distill.Util
  build-depends:
    base >=4.8 && <4.9
   ,mtl
   ,parsec
   ,pretty
   ,recursion-schemes
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -W

Executable driver-distill
  main-is:             Main.hs
  build-depends:
    base >=4.8 && <4.9
   ,mtl
   ,parsec
   ,pretty
   ,recursion-schemes
  hs-source-dirs:      src, driver
  default-language:    Haskell2010
  ghc-options:
    -W

Test-Suite test-distill
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base >=4.8 && <4.9
   ,HUnit
   ,mtl
   ,parsec
   ,pretty
   ,QuickCheck
   ,recursion-schemes
  hs-source-dirs:      src, test
  default-language:    Haskell2010
  ghc-options:
    -W
